# ood

./: .gitignore  CMakeLists.txt
lw/: CMakeLists.txt
lw/lw1/task1/: CMakeLists.txt  main.cpp
lw/lw1/task1/lib/DanceBehavior/CMinuetBehavior/: CMinuetBehavior.cpp
lw/lw1/task1/lib/DanceBehavior/CWaltzBehavior/: CWaltzBehavior.h
lw/lw1/task1/lib/DanceBehavior/CWithoutDancingBehavior/: CWithoutDancingBehavior.cpp
lw/lw1/task1/lib/Duck/CDecoyDuck/: CDecoyDuck.cpp  CDecoyDuck.h
lw/lw1/task1/lib/Duck/CDuck/: CDuck.cpp  CDuck.h
lw/lw1/task1/lib/Duck/CMallardDuck/: CMallardDuck.cpp  CMallardDuck.h
lw/lw1/task1/lib/Duck/CModelDuck/: CModelDuck.cpp  CModelDuck.h
lw/lw1/task1/lib/Duck/CRedheadDuck/: CRedheadDuck.cpp  CRedheadDuck.h
lw/lw1/task1/lib/Duck/CRubberDuck/: CRubberDuck.cpp  CRubberDuck.h
lw/lw1/task1/lib/FlyBehavior/: IFlyBehavior.h
lw/lw1/task1/lib/FlyBehavior/CFlyNoWay/: CFlyNoWay.h
lw/lw1/task1/lib/FlyBehavior/CFlyWithWings/: CFlyWithWings.cpp  CFlyWithWings.h
lw/lw1/task1/lib/QuackBehavior/CMuteQuackBehavior/: CMuteQuackBehavior.cpp  CMuteQuackBehavior.h
lw/lw1/task1/lib/QuackBehavior/CQuackBehavior/: CQuackBehavior.cpp  CQuackBehavior.h
lw/lw1/task1/lib/QuackBehavior/CSqueakBehavior/: CSqueakBehavior.cpp  CSqueakBehavior.h
lw/lw1/task2/: CMakeLists.txt  main.cpp
lw/lw1/task2/lib/DanceBehavior/: IDanceBehavior.h
lw/lw1/task2/lib/DanceBehavior/CMinuetBehavior/: CMinuetBehavior.h
lw/lw1/task2/lib/DanceBehavior/CWaltzBehavior/: CWaltzBehavior.cpp
lw/lw1/task2/lib/DanceBehavior/CWithoutDancingBehavior/: CWithoutDancingBehavior.h
lw/lw1/task2/lib/Duck/CDecoyDuck/: CDecoyDuck.h
lw/lw1/task2/lib/Duck/CDuck/: CDuck.cpp  CDuck.h
lw/lw1/task2/lib/Duck/CMallardDuck/: CMallardDuck.h
lw/lw1/task2/lib/Duck/CModelDuck/: CModelDuck.h
lw/lw1/task2/lib/FlyBehavior/: IFlyBehavior.h
lw/lw1/task3/: CMakeLists.txt  main.cpp
lw/lw2/task2/: CMakeLists.txt
lw/lw2/task2/lib/Observable/: CObservable.h  IObservable.h
lw/lw2/task2/lib/Observer/: IObserver.h
lw/lw2/task2/tests/: task2_test.cpp
lw/lw2/task4/: CMakeLists.txt  main.cpp
lw/lw2/task4/lib/Observable/: CObservable.h  IObservable.h
lw/lw2/task4/tests/: task4_test.cpp
lw/lw2/task5/: CMakeLists.txt  main.cpp
lw/lw2/task5/lib/Observable/: CObservable.h  IObservable.h
lw/lw2/task5/lib/Observer/: SWeatherInfo.h
lw/lw2/task5/tests/: task3_test.cpp
lw/lw2/task6/: CMakeLists.txt  main.cpp
lw/lw2/task6/lib/Observable/: CObservable.h
lw/lw2/task6/lib/Observer/: IObserver.h  SWeatherInfo.h
lw/lw2/task7/: CMakeLists.txt  main.cpp
lw/lw2/task7/lib/Observable/: CObservable.h  IObservable.h
lw/lw2/task7/lib/Observer/: IObserver.h  SWeatherInfo.h  SWindInfo.h
lw/lw3/task1/: CMakeLists.txt  main.cpp
lw/lw3/task3-streams/: CMakeLists.txt  main.cpp
lw/lw3/task3-streams/lib/Common/: CompressItem.h
lw/lw3/task3-streams/lib/Decorator/: CInputStreamDecorator.h  COutputStreamDecorator.h
lw/lw3/task3-streams/lib/InputStream/: IInputStream.h
lw/lw3/task3-streams/lib/OutputStream/: IOutputStream.h
lw/lw3/task3-streams/lib/SubstitutionTable/: CSubstitutionTable.cpp  CSubstitutionTable.h
lw/lw3/task3-streams/tests/: lw3_test.cpp
lw/lw4/: CMakeLists.txt  main.cpp
lw/lw4/data/: input.txt
lw/lw4/lib/Canvas/: CCanvas.cpp  CCanvas.h  ICanvas.h
lw/lw4/lib/Designer/: CDesigner.cpp  CDesigner.h  IDesigner.h
lw/lw4/lib/Painter/: CPainter.cpp  CPainter.h
lw/lw4/lib/PictureDraft/: CPictureDraft.cpp  CPictureDraft.h
lw/lw4/lib/Point/: CPoint.h
lw/lw4/lib/Shape/: CShape.cpp  CShape.h
lw/lw4/lib/Shape/Ellipse/: CEllipse.cpp  CEllipse.h
lw/lw4/lib/Shape/Rectangle/: CRectangle.cpp  CRectangle.h
lw/lw4/lib/Shape/RegularPolygon/: CRegularPolygon.cpp  CRegularPolygon.h
lw/lw4/lib/Shape/Triangle/: CTriangle.cpp  CTriangle.h
lw/lw4/lib/ShapeFactory/: CShapeFactory.cpp  CShapeFactory.h  IShapeFactory.h
lw/lw4/tests/: lw4_test.cpp
lw/lw5/editor/: CMakeLists.txt  main.cpp
lw/lw5/editor/lib/Command/: ICommand.h  ICommand_fwd.h
lw/lw5/editor/lib/Document/: CConstDocumentItem.cpp  CConstDocumentItem.h  CDocument.cpp  CDocument.h  CDocumentItem.cpp  CDocumentItem.h  IDocument.h
lw/lw5/editor/lib/Editor/: CEditor.cpp  CEditor.h
lw/lw5/editor/lib/History/: CHistory.cpp  CHistory.h
lw/lw5/editor/lib/Image/: CImage.cpp  CImage.h  IImage.h
lw/lw5/editor/lib/Menu/: CMenu.cpp  CMenu.h
lw/lw5/editor/lib/Paragraph/: CParagraph.cpp  CParagraph.h
lw/lw5/editor/tests/: lw5_test.cpp
lw/lw6/task2/: CMakeLists.txt
lw/lw6/task2/lib/: CCanvasPainter.h  CModernGraphicsLibAdapter.h
lw/lw6/task2/lib/graphics_lib/: graphics_lib.h
lw/lw6/task2/lib/modern_graphics_lib/: modern_graphics_lib.h
lw/lw6/task2/lib/shape_drawing_lib/: shape_drawing_lib.h
lw/lw6/task2/tests/: lw6_2_test.cpp
lw/lw6/task3/: CMakeLists.txt  main.cpp
lw/lw6/task3/lib/: CCanvasPainter.h  CModernGraphicsLibAdapter.h
lw/lw6/task3/lib/graphics_lib/: graphics_lib.h
lw/lw6/task3/lib/modern_graphics_lib/: modern_graphics_lib.h
lw/lw6/task3/lib/shape_drawing_lib/: shape_drawing_lib.h
lw/lw6/task3/tests/: lw6_3_test.cpp
lw/lw7/: CMakeLists.txt  main.cpp
lw/lw7/lib/Canvas/: ICanvas.h
lw/lw7/lib/Canvas/CCanvas/: CCanvas.cpp  CCanvas.h
lw/lw7/lib/Common/: CommonTypes.h  IDrawable.h  IFillStyle.h  ILineStyle.h  IStyle.h
lw/lw7/lib/GroupShape/: IGroupShape.h  IShapes.h
lw/lw7/lib/GroupShape/CGroupShape/: CGroupShape.cpp  CGroupShape.h
lw/lw7/lib/GroupShape/Style/: IGroupStyle.h
lw/lw7/lib/Shape/: IShape.h
lw/lw7/lib/Shape/CEllipse/: CEllipse.cpp  CEllipse.h
lw/lw7/lib/Shape/CRectangle/: CRectangle.cpp  CRectangle.h
lw/lw7/lib/Shape/CShape/: CShape.cpp  CShape.h
lw/lw7/lib/Shape/CTriangle/: CTriangle.cpp  CTriangle.h
lw/lw7/lib/Slide/: CSlide.cpp  CSlide.h  ISlide.h
lw/lw7/tests/: lw7_test.cpp
lw/lw8/MultiGumballMachineWithRefill/: CMakeLists.txt
lw/lw8/MultiGumballMachineWithRefill/lib/GumballMachine/: IGumballMachine.h
lw/lw8/MultiGumballMachineWithRefill/lib/State/: IState.h
lw/lw8/MultiGumballMachineWithRefill/tests/: MultiGumballMachineWithRefill_test.cpp
(+223 files in other folders)
