add_executable(
        lw6_2
        main.cpp
        lib/graphics_lib/graphics_lib.h
        lib/shape_drawing_lib/shape_drawing_lib.h
        lib/modern_graphics_lib/modern_graphics_lib.h
        lib/CCanvasPainter.h
        lib/CModernGraphicsLibAdapter.h
)

add_executable(
        lw6_2_test
        tests/lw6_2_test.cpp
        lib/graphics_lib/graphics_lib.h
        lib/shape_drawing_lib/shape_drawing_lib.h
        lib/modern_graphics_lib/modern_graphics_lib.h
        lib/CCanvasPainter.h
        lib/CModernGraphicsLibAdapter.h
)
